Retirada de algumas classes, Conexão com o Firebase, Criada classe para configuração do Firebase ,Criada classe de cadastro de usuario e autenticação, autenticação e cadastro de usuário.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="textValidacao">Você recebeu um SMS para validação do seu número,
                                  digite o código de validação abaixo</string>
     <string name="btnValidar">Validar</string>
+    <string name="logar">Logar</string>
+    <string name="textoCadastre">Não tem conta? Cadastre-se</string>
 </resources>
